--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ find_ups_product( lardataalg )
 find_ups_product( lardata )
 find_ups_product( larevt )
 find_ups_product( larsim )
+find_ups_product( larreco )
 find_ups_product( nutools )
 find_ups_product( nug4 )
 find_ups_product( nurandom )
