--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,10 @@ include(ArtMake)
 include(BuildPlugins)
 
 # cannot build tensorflow with our clang
-if( DEFINED ENV{TENSORFLOW_DIR} )
+# tensorflow and trtis_clients are artificially linked
+# at this time, trtis_clients is only available for python 3
+# therefore, we need to check to see if BOTH tesorflow and trtis_clients are available
+if(( DEFINED ENV{TENSORFLOW_DIR} ) AND ( DEFINED ENV{TRTIS_CLIENTS_DIR} ))
   # find tensorflow library
   find_ups_product( protobuf )
   find_ups_product( tensorflow )
