--- a/larrecodnn/ImagePatternAlgs/Tensorflow/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Tensorflow/CMakeLists.txt
@@ -1,5 +1,7 @@
 include_directories ( $ENV{TENSORFLOW_INC}/eigen )
 
 add_subdirectory(PointIdAlg)
+add_subdirectory(PointIdAlgTools)
+add_subdirectory(WaveformRecogTools)
 add_subdirectory(TF)
 add_subdirectory(Modules)
