--- a/larrecodnn/ImagePatternAlgs/Tensorflow/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Tensorflow/CMakeLists.txt
@@ -1,7 +1,9 @@
 include_directories ( $ENV{TENSORFLOW_INC}/eigen )
 
 add_subdirectory(PointIdAlg)
-add_subdirectory(PointIdAlgTools)
-add_subdirectory(WaveformRecogTools)
+if( DEFINED ENV{TRTIS_CLIENTS_DIR} )
+  add_subdirectory(PointIdAlgTools)
+  add_subdirectory(WaveformRecogTools)
+endif ()
 add_subdirectory(TF)
 add_subdirectory(Modules)
