new directory structure to separate tensorflow, trtis, and keras

--- a/larrecodnn/ImagePatternAlgs/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/CMakeLists.txt
@@ -1,5 +1,10 @@
 if( DEFINED ENV{TENSORFLOW_DIR} )
   add_subdirectory(Tensorflow)
 endif ()
+if( DEFINED ENV{TRTIS_CLIENTS_DIR} )
+  add_subdirectory(Triton)
+endif ()
 add_subdirectory(job)
+add_subdirectory(Modules)
+add_subdirectory(ToolInterfaces)
 add_subdirectory(Keras)
