--- a/larrecodnn/ImagePatternAlgs/Tensorflow/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Tensorflow/CMakeLists.txt
@@ -3,3 +3,4 @@ include_directories ( $ENV{TENSORFLOW_INC}/eigen )
 add_subdirectory(PointIdAlg)
 add_subdirectory(Tools)
 add_subdirectory(TF)
+add_subdirectory(Modules)
