--- a/larrecodnn/ImagePatternAlgs/Keras/Tools/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Keras/Tools/CMakeLists.txt
@@ -2,6 +2,7 @@ art_make(
           TOOL_LIBRARIES
           larreco_RecoAlg_ImagePatternAlgs_DataProvider
           larrecodnn_ImagePatternAlgs_Keras
+          larcorealg_Geometry
           ROOT::Core
           canvas
           ${MF_MESSAGELOGGER}
