--- a/larrecodnn/ImagePatternAlgs/Tensorflow/Modules/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Tensorflow/Modules/CMakeLists.txt
@@ -4,6 +4,7 @@ art_make( MODULE_LIBRARIES
 	larrecodnn_ImagePatternAlgs_Tensorflow_PointIdAlg
         art_Framework_Services_System_TriggerNamesService_service
         larsim_MCCheater_ParticleInventoryService_service
+        nurandom_RandomUtils_NuRandomService_service
 )
 
 install_headers()
