install missing quiet_session.h header

--- a/larrecodnn/ImagePatternAlgs/Tensorflow/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Tensorflow/CMakeLists.txt
@@ -4,3 +4,7 @@ add_subdirectory(PointIdAlg)
 add_subdirectory(Tools)
 add_subdirectory(TF)
 add_subdirectory(Modules)
+
+install_headers()
+install_source()
+
