deal with c7 warning

--- a/larrecodnn/ImagePatternAlgs/Tensorflow/TF/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Tensorflow/TF/CMakeLists.txt
@@ -1,4 +1,8 @@
 include_directories( $ENV{TENSORFLOW_INC}/absl )
+
+# the code in tf::Graph::~Graph() should be inspected 
+cet_add_compiler_flags(CXX -Wno-unused-result)
+
 art_make(
           LIB_LIBRARIES
 			${FHICLCPP}
