add missing larcorealg_Geometry library

--- a/larrecodnn/ImagePatternAlgs/Tensorflow/Tools/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Tensorflow/Tools/CMakeLists.txt
@@ -4,6 +4,7 @@ art_make(
           TOOL_LIBRARIES
           larreco_RecoAlg_ImagePatternAlgs_DataProvider
           larrecodnn_ImagePatternAlgs_Tensorflow_TF
+          larcorealg_Geometry
           ROOT::Core
           canvas
           ${MF_MESSAGELOGGER}
