--- a/larrecodnn/ImagePatternAlgs/Triton/Tools/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Triton/Tools/CMakeLists.txt
@@ -4,6 +4,7 @@ cet_find_library(GRPC_CLIENT NAMES grpcclient PATHS ENV TRITON_LIB REQUIRED)
 art_make(
           TOOL_LIBRARIES
           larreco_RecoAlg_ImagePatternAlgs_DataProvider
+          larcorealg_Geometry
           ROOT::Core
           canvas
           ${MF_MESSAGELOGGER}
