added NuSonic, port of cmssw Sonic; renamed Trtis to Triton; added Sonic version of PointIdAlg

--- a/larrecodnn/ImagePatternAlgs/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(job)
 add_subdirectory(Modules)
 add_subdirectory(ToolInterfaces)
 add_subdirectory(Keras)
+add_subdirectory(NuSonic)
