update library names

--- a/larrecodnn/ImagePatternAlgs/Keras/Tools/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Keras/Tools/CMakeLists.txt
@@ -4,8 +4,8 @@ art_make(
           larrecodnn_ImagePatternAlgs_Keras
           larcorealg_Geometry
           ROOT::Core
-          canvas
-          ${MF_MESSAGELOGGER}
+          canvas::canvas
+          messagefacility::MF_MessageLogger
         )
 
 install_source()
