--- a/larrecodnn/ImagePatternAlgs/Tensorflow/TF/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Tensorflow/TF/CMakeLists.txt
@@ -2,8 +2,8 @@ include_directories( $ENV{TENSORFLOW_INC}/absl )
 
 art_make(
           LIB_LIBRARIES
-			${FHICLCPP}
-			cetlib cetlib_except
+			fhiclcpp::fhiclcpp
+			cetlib::cetlib cetlib_except
 			${TENSORFLOW}
 			${PROTOBUF}
 			${FOR_TENSORFLOW}
