--- a/larrecodnn/ImagePatternAlgs/NuSonic/Triton/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/NuSonic/Triton/CMakeLists.txt
@@ -2,11 +2,11 @@ cet_find_library(GRPC_CLIENT NAMES grpcclient PATHS ENV TRITON_LIB REQUIRED)
 
 art_make(
           LIB_LIBRARIES
-          ${FHICLCPP}
-          cetlib cetlib_except
+          fhiclcpp::fhiclcpp
+          cetlib::cetlib cetlib_except
           ROOT::Core
-          canvas
-          ${MF_MESSAGELOGGER}
+          canvas::canvas
+          messagefacility::MF_MessageLogger
 	  ${GRPC_CLIENT}
           ${PROTOBUF}
         )
