--- a/larrecodnn/ImagePatternAlgs/NuSonic/Triton/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/NuSonic/Triton/CMakeLists.txt
@@ -1,5 +1,3 @@
-cet_find_library(GRPC_CLIENT NAMES grpcclient PATHS ENV TRITON_LIB REQUIRED)
-
 art_make(
           LIB_LIBRARIES
           fhiclcpp::fhiclcpp
@@ -7,8 +5,7 @@ art_make(
           ROOT::Core
           canvas::canvas
           messagefacility::MF_MessageLogger
-	  ${GRPC_CLIENT}
-          ${PROTOBUF}
+          TRITON::grpcclient
         )
 
 install_headers()
