--- a/larrecodnn/ImagePatternAlgs/Triton/Tools/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Triton/Tools/CMakeLists.txt
@@ -1,6 +1,3 @@
-
-cet_find_library(GRPC_CLIENT NAMES grpcclient PATHS ENV TRITON_LIB REQUIRED)
-
 art_make(
           TOOL_LIBRARIES
           larreco_RecoAlg_ImagePatternAlgs_DataProvider
@@ -9,8 +6,7 @@ art_make(
           ROOT::Core
           canvas::canvas
           messagefacility::MF_MessageLogger
-	  ${GRPC_CLIENT}
-          ${PROTOBUF}
+          TRITON::grpcclient
         )
 
 install_source()
