for rawwaveformdump modules, updated random number generator to CLHEP and removed a number of fhicl parameter defaults; removed extra semicolon from Span.h

--- a/larrecodnn/ImagePatternAlgs/Modules/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Modules/CMakeLists.txt
@@ -9,6 +9,7 @@ art_make( MODULE_LIBRARIES
                        lardataalg_DetectorInfo
                        lardataobj_RecoBase
                        nusimdata_SimulationBase
+                       nurandom_RandomUtils_NuRandomService_service
                        art::Framework_Core
                        art::Framework_Principal
                        art::Framework_Services_Registry
@@ -20,6 +21,7 @@ art_make( MODULE_LIBRARIES
                        art::Utilities
                        canvas::canvas
                        messagefacility::MF_MessageLogger
+                       ${CLHEP}
                        ${ROOT_BASIC_LIB_LIST}
                        ROOT::Core
 )
