--- a/larrecodnn/ImagePatternAlgs/Tensorflow/PointIdAlg/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Tensorflow/PointIdAlg/CMakeLists.txt
@@ -8,13 +8,13 @@ art_make(LIB_LIBRARIES larreco_RecoAlg_ImagePatternAlgs_DataProvider
                        lardataalg_DetectorInfo
                        lardataobj_RecoBase
                        larreco_Calorimetry
-                       nusimdata_SimulationBase
+                       nusimdata::SimulationBase
                        art::Framework_Core
                        art::Framework_Principal
                        art::Framework_Services_Registry
                        art_root_io::tfile_support
                        art_root_io::TFileService_service
-                       ${ART_FRAMEWORK_SERVICES_OPTIONAL_RANDOMNUMBERGENERATOR_SERVICE}
+                       art::Framework_Services_Optional_RandomNumberGenerator_service
                        art::Persistency_Common
                        art::Persistency_Provenance
                        art::Utilities
