--- a/larrecodnn/ImagePatternAlgs/NuSonic/Triton/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/NuSonic/Triton/CMakeLists.txt
@@ -2,6 +2,7 @@ art_make(
           LIB_LIBRARIES
           fhiclcpp::fhiclcpp
           cetlib::cetlib cetlib_except
+          art::Framework_Services_Registry
           ROOT::Core
           canvas::canvas
           messagefacility::MF_MessageLogger
