larrecodnn v09_10_04 for larsoft v09_42_00

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@
 
 cmake_minimum_required(VERSION 3.19 FATAL_ERROR)
 
-project(larrecodnn VERSION 09.10.03 LANGUAGES CXX)
+project(larrecodnn VERSION 09.10.04 LANGUAGES CXX)
 
 # cetbuildtools contains our cmake modules
 find_package(cetbuildtools REQUIRED)
@@ -30,6 +30,7 @@ find_package (Eigen3 3.3...3.3.9 REQUIRED NO_MODULE)
 find_package(canvas_root_io REQUIRED)
 find_package(art REQUIRED PUBLIC)
 find_package(art_root_io REQUIRED PUBLIC)
+find_package(nusimdata REQUIRED PUBLIC)
 find_package(nurandom REQUIRED PUBLIC)
 find_package(nug4 REQUIRED PUBLIC)
 find_package(nutools REQUIRED PUBLIC)
