--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,13 @@
 #  buildtool [-I /install/path] -bt[i] -jN
 # ======================================================================
 
-cmake_minimum_required(VERSION 3.19 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
+# cmake_policy(VERSION 3.19) ### MIGRATE-ACTION-COMPATIBILITY (migrate-3.16.00) - Uncomment to preserve compatibility with older CMake versions
 
+find_package(cetmodules REQUIRED)
 project(larrecodnn VERSION 09.11.10 LANGUAGES CXX)
 
 # cetbuildtools contains our cmake modules
-find_package(cetbuildtools REQUIRED)
 find_package(Threads)
 
 include(CetCMakeEnv)
@@ -23,29 +24,29 @@ cet_set_compiler_flags(DIAGS CAUTIOUS
   EXTRA_FLAGS -Wno-unused-local-typedefs
 )
 
-cet_report_compiler_flags()
+cet_report_compiler_flags() ### MIGRATE-ACTION-RECOMMENDED (migrate-3.16.00) - add args: REPORT_THRESHOLD VERBOSE
 
-find_package(Range-v3 REQUIRED PUBLIC)
+find_package(Range-v3 REQUIRED EXPORT)
 find_package (Eigen3 3.3...3.3.9 REQUIRED NO_MODULE)
 find_package(canvas_root_io REQUIRED)
-find_package(art REQUIRED PUBLIC)
-find_package(art_root_io REQUIRED PUBLIC)
-find_package(nusimdata REQUIRED PUBLIC)
-find_package(nurandom REQUIRED PUBLIC)
-find_package(nug4 REQUIRED PUBLIC)
-find_package(nutools REQUIRED PUBLIC)
-find_package(PostgreSQL REQUIRED PUBLIC)
-find_package(ROOT COMPONENTS Core Minuit Minuit2 REQUIRED PUBLIC)
+find_package(art REQUIRED EXPORT)
+find_package(art_root_io REQUIRED EXPORT)
+find_package(nusimdata REQUIRED EXPORT)
+find_package(nurandom REQUIRED EXPORT)
+find_package(nug4 REQUIRED EXPORT)
+find_package(nutools REQUIRED EXPORT)
+find_package(PostgreSQL REQUIRED EXPORT)
+find_package(ROOT COMPONENTS Core Minuit Minuit2 REQUIRED EXPORT)
 
-find_ups_product( larcoreobj )
-find_ups_product( larcorealg )
-find_ups_product( larcore )
-find_ups_product( lardataobj )
-find_ups_product( lardataalg )
-find_ups_product( lardata )
-find_ups_product( larevt )
-find_ups_product( larsim )
-find_ups_product( larreco )
+find_package( larcoreobj REQUIRED )
+find_package( larcorealg REQUIRED )
+find_package( larcore REQUIRED )
+find_package( lardataobj REQUIRED )
+find_package( lardataalg REQUIRED )
+find_package( lardata REQUIRED )
+find_package( larevt REQUIRED )
+find_package( larsim REQUIRED )
+find_package( larreco REQUIRED )
 
 # macros for dictionary and simple_plugin
 include(ArtDictionary)
@@ -58,23 +59,22 @@ endif ()
 # tensorflow is optional
 if( DEFINED ENV{TENSORFLOW_DIR} )
   # find tensorflow library
-  find_ups_product( tensorflow )
-  cet_find_library(TENSORFLOW NAMES tensorflow PATHS ENV TENSORFLOW_LIB NO_DEFAULT_PATH )
-  cet_find_library(FOR_TENSORFLOW NAMES tensorflow_framework PATHS ENV TENSORFLOW_LIB NO_DEFAULT_PATH )
+  find_package( tensorflow REQUIRED )
+  cet_find_library(TENSORFLOW NAMES tensorflow PATHS ENV TENSORFLOW_LIB NO_DEFAULT_PATH ) ### MIGRATE-ACTION-REQUIRED (migrate-3.16.00) - avoid: use find_package() with custom Find<pkg>.cmake for Spack compatibility
+  cet_find_library(FOR_TENSORFLOW NAMES tensorflow_framework PATHS ENV TENSORFLOW_LIB NO_DEFAULT_PATH ) ### MIGRATE-ACTION-REQUIRED (migrate-3.16.00) - avoid: use find_package() with custom Find<pkg>.cmake for Spack compatibility
 endif ()
 # trtis_clients is optional
 if( DEFINED ENV{TRITON_DIR} )
-  find_ups_product(triton)
-  find_ups_product(grpc)
+  find_package(triton REQUIRED)
+  find_package(grpc REQUIRED)
 endif ()
 
-include_directories( $ENV{EIGEN_INC} )
+include_directories( $ENV{EIGEN_INC} ) ### MIGRATE-ACTION-RECOMMENDED (migrate-3.16.00) - avoid directory-scope functions: use target_link_libraries() with target semantics or target_include_directories() whenever possible
 
 # source
 add_subdirectory(larrecodnn)
 
 # ups - table and config files
-add_subdirectory(ups)
 
 # packaging utility
-include(UseCPack)
+cet_cmake_config()
