--- a/larrecodnn/ImagePatternAlgs/Tensorflow/Modules/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Tensorflow/Modules/CMakeLists.txt
@@ -5,7 +5,7 @@ art_make( MODULE_LIBRARIES
         art_Framework_Services_System_TriggerNamesService_service
         larsim_MCCheater_ParticleInventoryService_service
         nurandom_RandomUtils_NuRandomService_service
-)
+) ### MIGRATE-ACTION-RECOMMENDED (migrate-3.16.00) - deprecated: use art_make_library(), art_dictonary(), and cet_build_plugin() with explicit source lists and plugin base types
 
 install_headers()
 install_fhicl()
