--- a/larrecodnn/ImagePatternAlgs/Tensorflow/Tools/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Tensorflow/Tools/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories( $ENV{TENSORFLOW_INC}/absl )
+include_directories( $ENV{TENSORFLOW_INC}/absl ) ### MIGRATE-ACTION-RECOMMENDED (migrate-3.16.00) - avoid directory-scope functions: use target_link_libraries() with target semantics or target_include_directories() whenever possible
 
 art_make(
           TOOL_LIBRARIES
@@ -8,6 +8,6 @@ art_make(
           ROOT::Core
           canvas::canvas
           messagefacility::MF_MessageLogger
-        )
+        ) ### MIGRATE-ACTION-RECOMMENDED (migrate-3.16.00) - deprecated: use art_make_library(), art_dictonary(), and cet_build_plugin() with explicit source lists and plugin base types
 
 install_source()
