--- a/larrecodnn/ImagePatternAlgs/NuSonic/Triton/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/NuSonic/Triton/CMakeLists.txt
@@ -1,13 +1,16 @@
-art_make(
-          LIB_LIBRARIES
-          fhiclcpp::fhiclcpp
-          cetlib::cetlib cetlib_except
-          art::Framework_Services_Registry
-          ROOT::Core
-          canvas::canvas
-          messagefacility::MF_MessageLogger
-          TRITON::grpcclient
-        ) ### MIGRATE-ACTION-RECOMMENDED (migrate-3.16.00) - deprecated: use art_make_library(), art_dictonary(), and cet_build_plugin() with explicit source lists and plugin base types
+cet_make_library(SOURCE
+  TritonClient.cc
+  TritonData.cc
+  triton_utils.cc
+  LIBRARIES
+  PUBLIC
+  TRITON::grpcclient
+  gRPC::grpc # Should be a transitive (INTERFACE) dependency of TRITON::grpcclient
+  PRIVATE
+  messagefacility::MF_MessageLogger
+  fhiclcpp::fhiclcpp
+  cetlib_except::cetlib_except
+)
 
 install_headers()
 install_source()
