--- a/larrecodnn/ImagePatternAlgs/Tensorflow/Modules/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Tensorflow/Modules/CMakeLists.txt
@@ -1,11 +1,88 @@
-art_make( MODULE_LIBRARIES
-	lardata_ArtDataHelper
-        lardataobj_RawData
-	larrecodnn_ImagePatternAlgs_Tensorflow_PointIdAlg
-        art_Framework_Services_System_TriggerNamesService_service
-        larsim_MCCheater_ParticleInventoryService_service
-        nurandom_RandomUtils_NuRandomService_service
-) ### MIGRATE-ACTION-RECOMMENDED (migrate-3.16.00) - deprecated: use art_make_library(), art_dictonary(), and cet_build_plugin() with explicit source lists and plugin base types
+cet_build_plugin(EmTrackClusterId2out art::EDProducer
+  LIBRARIES PRIVATE
+  larrecodnn::ImagePatternAlgs_Tensorflow_PointIdAlg
+  lardata::ArtDataHelper
+  lardata::DetectorClocksService
+  lardata::DetectorPropertiesService
+  lardata::AssociationUtil
+  lardataobj::RecoBase
+  larcoreobj::SimpleTypesAndConstants
+  art::Framework_Services_System_TriggerNamesService_service
+  art::Framework_Services_Registry
+  canvas::canvas
+  messagefacility::MF_MessageLogger
+  fhiclcpp::types
+  fhiclcpp::fhiclcpp
+  cetlib_except::cetlib_except
+)
+
+cet_build_plugin(EmTrackClusterId3out art::EDProducer
+  LIBRARIES PRIVATE
+  larrecodnn::ImagePatternAlgs_Tensorflow_PointIdAlg
+  lardata::ArtDataHelper
+  lardata::DetectorClocksService
+  lardata::DetectorPropertiesService
+  lardata::AssociationUtil
+  lardataobj::RecoBase
+  larcoreobj::SimpleTypesAndConstants
+  art::Framework_Services_System_TriggerNamesService_service
+  art::Framework_Services_Registry
+  canvas::canvas
+  messagefacility::MF_MessageLogger
+  fhiclcpp::types
+  fhiclcpp::fhiclcpp
+  cetlib_except::cetlib_except
+)
+
+cet_build_plugin(EmTrackMichelId art::EDProducer
+  LIBRARIES PRIVATE
+  larrecodnn::ImagePatternAlgs_Tensorflow_PointIdAlg
+  lardata::ArtDataHelper
+  lardata::DetectorClocksService
+  lardata::DetectorPropertiesService
+  lardata::AssociationUtil
+  lardataobj::RecoBase
+  larcoreobj::SimpleTypesAndConstants
+  art::Framework_Services_System_TriggerNamesService_service
+  art::Framework_Services_Registry
+  canvas::canvas
+  messagefacility::MF_MessageLogger
+  fhiclcpp::types
+  fhiclcpp::fhiclcpp
+  cetlib_except::cetlib_except
+)
+
+cet_build_plugin(ParticleDecayId art::EDProducer
+  LIBRARIES PRIVATE
+  larrecodnn::ImagePatternAlgs_Tensorflow_PointIdAlg
+  lardata::DetectorClocksService
+  lardata::DetectorPropertiesService
+  lardata::AssociationUtil
+  lardataobj::RecoBase
+  art::Framework_Services_Registry
+  canvas::canvas
+  messagefacility::MF_MessageLogger
+  fhiclcpp::types
+  fhiclcpp::fhiclcpp
+)
+
+cet_build_plugin(PointIdTrainingData art::EDAnalyzer
+  LIBRARIES PRIVATE
+  larrecodnn::ImagePatternAlgs_Tensorflow_PointIdAlg
+  lardata::DetectorClocksService
+  lardata::DetectorPropertiesService
+  larcore::Geometry_Geometry_service
+  larcorealg::Geometry
+  nurandom::RandomUtils_NuRandomService_service
+  art_root_io::TFileService_service
+  art::Framework_Services_Registry
+  canvas::canvas
+  messagefacility::MF_MessageLogger
+  fhiclcpp::types
+  fhiclcpp::fhiclcpp
+  CLHEP::Random
+  ROOT::Hist
+)
 
 install_headers()
 install_fhicl()
