--- a/larrecodnn/ImagePatternAlgs/Triton/Tools/CMakeLists.txt
+++ b/larrecodnn/ImagePatternAlgs/Triton/Tools/CMakeLists.txt
@@ -1,12 +1,21 @@
-art_make(
-          TOOL_LIBRARIES
-          larreco_RecoAlg_ImagePatternAlgs_DataProvider
-          larcorealg_Geometry
-          larrecodnn_ImagePatternAlgs_NuSonic_Triton
-          ROOT::Core
-          canvas::canvas
-          messagefacility::MF_MessageLogger
-          TRITON::grpcclient
-        ) ### MIGRATE-ACTION-RECOMMENDED (migrate-3.16.00) - deprecated: use art_make_library(), art_dictonary(), and cet_build_plugin() with explicit source lists and plugin base types
+include (lar::PointIdAlgorithm)
+
+cet_build_plugin(PointIdAlgSonicTriton lar::PointIdAlgorithm
+  LIBRARIES PRIVATE
+  larrecodnn_ImagePatternAlgs_NuSonic_Triton
+  messagefacility::MF_MessageLogger
+  fhiclcpp::types
+  fhiclcpp::fhiclcpp
+)
+
+cet_build_plugin(PointIdAlgTriton lar::PointIdAlgorithm
+  LIBRARIES PRIVATE
+  TRITON::grpcclient
+  gRPC::grpc # Should be a transitive (INTERFACE) dependency of TRITON::grpcclient
+  messagefacility::MF_MessageLogger
+  fhiclcpp::types
+  fhiclcpp::fhiclcpp
+  cetlib_except::cetlib_except
+)
 
 install_source()
